[gd_scene load_steps=49 format=2]

[ext_resource path="res://enemies/PosessedSwordsman/state_machine/StateMachine.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/PosessedSwordsman/assets/attack.png" type="Texture" id=2]
[ext_resource path="res://enemies/PosessedSwordsman/PosessedSwordsman.gd" type="Script" id=3]
[ext_resource path="res://enemies/PosessedSwordsman/assets/dead.png" type="Texture" id=4]
[ext_resource path="res://enemies/PosessedSwordsman/assets/idle.png" type="Texture" id=5]
[ext_resource path="res://enemies/PosessedSwordsman/assets/1.png" type="Texture" id=6]
[ext_resource path="res://enemies/PosessedSwordsman/assets/stunned.png" type="Texture" id=7]
[ext_resource path="res://enemies/PosessedSwordsman/assets/defend.png" type="Texture" id=8]
[ext_resource path="res://utils/Plane2DMovementHelper.tscn" type="PackedScene" id=9]
[ext_resource path="res://utils/DropItemComponent.tscn" type="PackedScene" id=10]
[ext_resource path="res://enemies/PosessedSwordsman/assets/telegraph.png" type="Texture" id=11]
[ext_resource path="res://enemies/PosessedSwordsman/assets/open.png" type="Texture" id=12]
[ext_resource path="res://enemies/PosessedSwordsman/assets/stunned2.png" type="Texture" id=13]
[ext_resource path="res://common/assets/sounds/sword_clank.ogg" type="AudioStream" id=14]
[ext_resource path="res://enemies/CorruptedVillager/assets/peasant_2_dead_2.png" type="Texture" id=15]
[ext_resource path="res://effects/sounds/damage_sound_scenes.tscn" type="PackedScene" id=16]
[ext_resource path="res://common/assets/sounds/60013__qubodup__whoosh.wav" type="AudioStream" id=17]
[ext_resource path="res://players/Player/sprites/legs/player-legs-Sheet.png" type="Texture" id=18]
[ext_resource path="res://players/Player/sprites/legs/lunge.png" type="Texture" id=19]
[ext_resource path="res://players/Player/sprites/legs/legs_sidestep-Sheet-export.png" type="Texture" id=20]
[ext_resource path="res://enemies/PosessedSwordsman/assets/sword_glint_sheet.png" type="Texture" id=21]
[ext_resource path="res://enemies/PosessedSwordsman/Sounds/sword_slide.ogg" type="AudioStream" id=22]
[ext_resource path="res://enemies/CorruptedVillager/Sounds/CreepyPeasant/CreepyPeasantDeath.ogg" type="AudioStream" id=23]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "open",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "ready",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 4 ) ],
"loop": false,
"name": "dead",
"speed": 12.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "dead 1",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "charge",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 13 ) ],
"loop": true,
"name": "stunned",
"speed": 10.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "telegraph",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "defend",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=26]
flags = 18
atlas = ExtResource( 21 )
region = Rect2( 0, 0, 10, 40 )

[sub_resource type="AtlasTexture" id=27]
flags = 18
atlas = ExtResource( 21 )
region = Rect2( 10, 0, 10, 40 )

[sub_resource type="AtlasTexture" id=28]
flags = 18
atlas = ExtResource( 21 )
region = Rect2( 20, 0, 10, 40 )

[sub_resource type="AtlasTexture" id=29]
flags = 18
atlas = ExtResource( 21 )
region = Rect2( 30, 0, 10, 40 )

[sub_resource type="AtlasTexture" id=30]
flags = 18
atlas = ExtResource( 21 )
region = Rect2( 40, 0, 10, 40 )

[sub_resource type="SpriteFrames" id=31]
animations = [ {
"frames": [ null, SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), null ],
"loop": false,
"name": "glint",
"speed": 30.0
} ]

[sub_resource type="BoxShape" id=32]
extents = Vector3( 0.5, 0.5, 0.797893 )

[sub_resource type="AtlasTexture" id=33]
flags = 18
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=34]
flags = 18
atlas = ExtResource( 18 )
region = Rect2( 400, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=35]
flags = 18
atlas = ExtResource( 18 )
region = Rect2( 800, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=36]
flags = 18
atlas = ExtResource( 18 )
region = Rect2( 1200, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=37]
flags = 18
atlas = ExtResource( 18 )
region = Rect2( 1600, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=38]
flags = 18
atlas = ExtResource( 18 )
region = Rect2( 2000, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=39]
flags = 18
atlas = ExtResource( 19 )
region = Rect2( 0, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=42]
flags = 18
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=21]
flags = 18
atlas = ExtResource( 20 )
region = Rect2( 1600, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=22]
flags = 18
atlas = ExtResource( 20 )
region = Rect2( 2000, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=23]
flags = 18
atlas = ExtResource( 20 )
region = Rect2( 2400, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=24]
flags = 18
atlas = ExtResource( 20 )
region = Rect2( 2800, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=25]
flags = 18
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=40]
flags = 18
atlas = ExtResource( 20 )
region = Rect2( 2400, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=41]
flags = 18
atlas = ExtResource( 20 )
region = Rect2( 2800, 0, 400, 400 )

[sub_resource type="SpriteFrames" id=43]
animations = [ {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "move",
"speed": 8.0
}, {
"frames": [ SubResource( 39 ) ],
"loop": true,
"name": "charge",
"speed": 5.0
}, {
"frames": [ SubResource( 42 ) ],
"loop": true,
"name": "still",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), null, SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "flank",
"speed": 12.0
} ]

[node name="PosessedSwordsman" type="KinematicBody"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0 )
collision_layer = 5
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.721694, 0, 0, 0, 1, 0, 0, 0, 0.763548, 0, 0, 0.454157 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite3D" parent="."]
transform = Transform( -1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 0, 0, 0 )
layers = 2
shaded = true
frames = SubResource( 2 )
animation = "telegraph"

[node name="AnimatedSpriteGlint" type="AnimatedSprite3D" parent="."]
transform = Transform( 8.47852, 0, 0, 0, -1.19683e-07, 1, 0, -2.73803, -4.37114e-08, 0, 0, -0.66166 )
layers = 2
generate_lightmap = false
double_sided = false
frames = SubResource( 31 )
animation = "glint"
frame = 6
playing = true

[node name="StunnedTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0344093 )
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape" parent="AttackArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.258412 )
shape = SubResource( 32 )

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="StateMachine" parent="." instance=ExtResource( 1 )]

[node name="ObservePlayerTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Plane2DMovementHelper" parent="." instance=ExtResource( 9 )]

[node name="DropItemComponent" parent="." instance=ExtResource( 10 )]

[node name="BlockingSwordClankAudioStreamPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 14 )
attenuation_model = 3
pitch_scale = 0.76

[node name="BlockedSwordClankAudioStreamPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 14 )
attenuation_model = 3
pitch_scale = 0.9

[node name="AttackAudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 0.833333, 0, 0, 0, 1, 0, 0, 0, 0.833333, 0.0206557, 0, 0.0205977 )
stream = ExtResource( 17 )
attenuation_model = 3

[node name="FootstepsAudioStreamPlayer2D" type="AudioStreamPlayer3D" parent="."]
unit_db = 10.414

[node name="DamageAudioStreamPlayer3D" parent="." instance=ExtResource( 16 )]
unit_db = 5.881

[node name="SwordSlideAudioStreamPlayer3D" parent="." instance=ExtResource( 16 )]
stream = ExtResource( 22 )
unit_db = -4.0

[node name="AnimatedSpriteLegs" type="AnimatedSprite3D" parent="."]
transform = Transform( 0.8, 0, 0, 0, -3.49691e-08, 1, 0, -0.8, -4.37114e-08, 0.0333741, -0.0179672, 0.425145 )
layers = 2
flip_v = true
shaded = true
frames = SubResource( 43 )
animation = "flank"
frame = 7
playing = true

[node name="DeathAudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 23 )
unit_size = 4.0

[node name="DamageSpriteModulateTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Tween" type="Tween" parent="."]
